IODevice transport system working

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
+
+# Used for testing with file-based logs
+/logs
+
+config/*.secret.exs
