--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
 language: elixir
 elixir:
-  - 1.4.0
-  - 1.3.0
+- 1.4.0
+- 1.3.0
 otp_release:
-  - 19.0
-  - 18.3
+- 19.0
+- 18.3
+env:
+  global:
+  - CI_USE_CUSTOM_DEPS=true
+  matrix:
+  - PHOENIX_VERSION_CONSTRAINT=latest
+  - PHOENIX_VERSION_CONSTRAINT=1.3.0
+  - PHOENIX_VERSION_CONSTRAINT=1.2.0
+  - PHOENIX_VERSION_CONSTRAINT=1.1.0
+  - ECTO_VERSION_CONSTRAINT=latest
+  - ECTO_VERSION_CONSTRAINT=2.1.0
+  - ECTO_VERSION_CONSTRAINT=2.0.0
 script:
-  - MIX_ENV=test mix compile --warnings-as-errors && MIX_ENV=test mix test
+- MIX_ENV=test mix compile --warnings-as-errors && MIX_ENV=test mix test
 notifications:
   slack:
     rooms:
