--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ otp_release:
 - 19.0
 - 18.3
 env:
-  global:
-  - CI_USE_CUSTOM_DEPS=true
   matrix:
   - PHOENIX_VERSION_CONSTRAINT=latest
   - PHOENIX_VERSION_CONSTRAINT=1.3.0
@@ -16,6 +14,8 @@ env:
   - ECTO_VERSION_CONSTRAINT=latest
   - ECTO_VERSION_CONSTRAINT=2.1.0
   - ECTO_VERSION_CONSTRAINT=2.0.0
+install:
+  - test
 script:
 - MIX_ENV=test mix compile --warnings-as-errors && MIX_ENV=test mix test
 notifications:
