--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ otp_release:
 env:
   matrix:
   - PHOENIX_VERSION_CONSTRAINT=latest
-  - PHOENIX_VERSION_CONSTRAINT=1.3.0
+  - PHOENIX_VERSION_CONSTRAINT=1.3.0-rc.0
   - PHOENIX_VERSION_CONSTRAINT=1.2.0
   - PHOENIX_VERSION_CONSTRAINT=1.1.0
   - ECTO_VERSION_CONSTRAINT=latest
