--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,19 @@ otp_release:
 - 18.3
 env:
   matrix:
+  - ECTO_VERSION_CONSTRAINT=omit
+  - ECTO_VERSION_CONSTRAINT=latest
+  - ECTO_VERSION_CONSTRAINT=2.1.0
+  - ECTO_VERSION_CONSTRAINT=2.0.0
+  - PHOENIX_VERSION_CONSTRAINT=omit
   - PHOENIX_VERSION_CONSTRAINT=latest
   - PHOENIX_VERSION_CONSTRAINT=1.3.0-rc.0
   - PHOENIX_VERSION_CONSTRAINT=1.2.0
   - PHOENIX_VERSION_CONSTRAINT=1.1.0
-  - ECTO_VERSION_CONSTRAINT=latest
-  - ECTO_VERSION_CONSTRAINT=2.1.0
-  - ECTO_VERSION_CONSTRAINT=2.0.0
+  - PLUG_VERSION_CONSTRAINT=omit
+  - PLUG_VERSION_CONSTRAINT=latest
 script:
-- MIX_ENV=test mix compile --warnings-as-errors && MIX_ENV=test mix test
+- MIX_ENV=test mix compile && MIX_ENV=test mix test
 notifications:
   email: false
   slack:
