--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: elixir
 elixir:
+- 1.5.0
 - 1.4.5
 - 1.3.4
 otp_release:
+- 20.0
 - 19.3
 - 18.3
 env:
@@ -13,7 +15,7 @@ env:
   - ECTO_VERSION_CONSTRAINT=2.0.0
   - PHOENIX_VERSION_CONSTRAINT=omit
   - PHOENIX_VERSION_CONSTRAINT=latest
-  - PHOENIX_VERSION_CONSTRAINT=1.3.0-rc.2
+  - PHOENIX_VERSION_CONSTRAINT=1.3.0-rc3
   - PHOENIX_VERSION_CONSTRAINT=1.2.0
   - PHOENIX_VERSION_CONSTRAINT=1.1.0
   - PLUG_VERSION_CONSTRAINT=omit
