--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
   - ECTO_VERSION_CONSTRAINT=2.0.0
   - PHOENIX_VERSION_CONSTRAINT=omit
   - PHOENIX_VERSION_CONSTRAINT=latest
-  - PHOENIX_VERSION_CONSTRAINT=1.3.0-rc.3
+  - PHOENIX_VERSION_CONSTRAINT="~> 1.3.0-rc"
   - PHOENIX_VERSION_CONSTRAINT=1.2.0
   - PHOENIX_VERSION_CONSTRAINT=1.1.0
   - PLUG_VERSION_CONSTRAINT=omit
