--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ env:
   - PHOENIX_VERSION_CONSTRAINT=1.1.0
   - PLUG_VERSION_CONSTRAINT=omit
   - PLUG_VERSION_CONSTRAINT=latest
+matrix:
+  exclude:
+  - elixir: 1.3.4
+    otp_release: 20.0
 script:
 - MIX_ENV=test mix compile && MIX_ENV=test mix test
 notifications:
