--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,27 @@
+---
 language: elixir
 elixir:
-- 1.5.0
-- 1.4.5
-- 1.3.4
+  - 1.5.0
+  - 1.4.5
+  - 1.3.4
 otp_release:
-- 20.0
-- 19.3
-- 18.3
+  - 20.0
+  - 19.3
+  - 18.3
 env:
   matrix:
-  - ECTO_VERSION_CONSTRAINT=omit
-  - ECTO_VERSION_CONSTRAINT=latest
-  - ECTO_VERSION_CONSTRAINT=2.1.0
-  - ECTO_VERSION_CONSTRAINT=2.0.0
-  - PHOENIX_VERSION_CONSTRAINT=omit
-  - PHOENIX_VERSION_CONSTRAINT=latest
-  - PHOENIX_VERSION_CONSTRAINT="~> 1.3.0-rc"
-  - PHOENIX_VERSION_CONSTRAINT=1.2.0
-  - PHOENIX_VERSION_CONSTRAINT=1.1.0
-  - PLUG_VERSION_CONSTRAINT=omit
-  - PLUG_VERSION_CONSTRAINT=latest
+    - ECTO_VERSION_CONSTRAINT="~> 2.0"
+    - ECTO_VERSION_CONSTRAINT="~> 2.1"
+    - PHOENIX_VERSION_CONSTRAINT="~> 1.2"
+    - PHOENIX_VERSION_CONSTRAINT="~> 1.1"
+    - PLUG_VERSION_CONSTRAINT="~> 1.2"
+    - PLUG_VERSION_CONSTRAINT="~> 1.3"
 matrix:
   exclude:
-  - elixir: 1.3.4
-    otp_release: 20.0
+    - elixir: 1.3.4
+      otp_release: 20.0
 script:
-- MIX_ENV=test mix compile && MIX_ENV=test mix test
+  - MIX_ENV=test mix test
 notifications:
   email: false
   slack:
