--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 ---
 language: elixir
 elixir:
-  - 1.6.3
-  - 1.5.0
-  - 1.4.5
-  - 1.3.4
+  - 1.6.5
+  - 1.5
+  - 1.4
+  - 1.3
 otp_release:
   - 20.2.2
   - 20.0
@@ -14,16 +14,25 @@ env:
   matrix:
     - NO_THIRD_PARTY_INTEGRATION_TEST=true
     - NO_THIRD_PARTY_INTEGRATION_TEST=false
+
 matrix:
   exclude:
-    - elixir: 1.3.4
+    - elixir: 1.3
       otp_release: 20.0
-    - elixir: 1.3.4
+    - elixir: 1.3
       otp_release: 20.2.2
-    - elixir: 1.6.3
+    - elixir: 1.6.5
       otp_release: 18.3
+
 script:
   - MIX_ENV=test mix compile && mix test
+  - if [ "$TRAVIS_ELIXIR_VERSION" = "1.6.5" ] && [ "$TRAVIS_OTP_RELEASE" = "20.2.2" ]; then mix dialyzer; fi
+
+cache:
+  directories:
+    - .mix
+    - _build
+
 notifications:
   email: false
   slack:
