--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ matrix:
       otp_release: 18.3
 
 script:
+  - if [ "$TRAVIS_ELIXIR_VERSION" = "1.6.5" ]; then mix format --check-formatted --dry-run; fi
   - MIX_ENV=test mix compile && mix test
   - if [ "$TRAVIS_ELIXIR_VERSION" = "1.6.5" ] && [ "$TRAVIS_OTP_RELEASE" = "20.2.2" ]; then mix dialyzer; fi
 
