--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - if [ "$TRAVIS_ELIXIR_VERSION" = "1.6.6" ]; then mix format --check-formatted --dry-run; fi
   - MIX_ENV=test mix compile && mix test
   - if [ "$TRAVIS_ELIXIR_VERSION" = "1.6.6" ] && [ "$TRAVIS_OTP_RELEASE" = "21.0" ]; then mix dialyzer; fi
-  - if [ "$TRAVIS_ELIXIR_VERSION" = "1.6.6" ] && [ "$TRAVIS_OTP_RELEASE" = "21.0" ]; then mix coveralls; fi
+  - if [ "$TRAVIS_ELIXIR_VERSION" = "1.6.6" ] && [ "$TRAVIS_OTP_RELEASE" = "21.0" ]; then mix coveralls.travis; fi
 
 cache:
   directories:
